exercicio css resposive

--- a/index.html
+++ b/index.html
@@ -27,25 +27,54 @@
     </div>
     </header>
     <section id="sobre">
-        <div class="container">
-            <div class="box">
+        <div class="loja">
+            <div >
              <img  class="profile" src="./imagens/cervejaria.jpg" alt="Fachada de BeerShop no bairro recanto em São Paulo"/>
             </div>
-             <div class="box">
+             <div>
              <h2> A BEERSHOP</h2>
              <p>Mais do que difundir a cultura cervejeira e formar novos apreciadores, queremos ser um alicerce e um apoio para os iniciantes. Como fonte de informações e inspiração para quem busca conhecimento, criamos o blog BEERSHOP, um blog de cervejas especiais, com muito conteúdo e informação para quem quer ficar por dentro das novidades e aprender muito mais sobre essa bebida milenar. Mais do que tudo, nossa missão é tornar o dia dos apaixonados por cerveja, cada vez mais aromático, saboroso e divertido.</p>
             <ul class="brands">
                 <li><img src="./imagens/leffe.png" alt="Cerveja leffe"/></li>
                 <li><img src="./imagens/guinness.png" alt="Cerveja Guinness"/></li>
                 <li><img src="./imagens/carlsberg-2.png" alt="Cerveja Carlsberg"/></li>
-        
-            </ul>
+             </ul>
         </div>
         </div>
      </section>
+     <section id="venda">
+        <h1>PRODUTOS</h1>
+        <div class="produtos">
+           
+            <article class="produto">
+                <img src="./imagens/ipa.jpg">
+                <h3>Cerveja IPA</h3>
+                <p>Lorem ipsum dolor afertunm lorem dolorics at notecum</p>
+                <button>Comprar</button>
+            </article>
+            <article class="produto">
+                <img src="./imagens/delirium.jpg">
+                <h3>Cerveja IPA</h3>
+                <p>Lorem ipsum dolor afertunm lorem dolorics at notecum</p>
+                <button>Comprar</button>
+            </article>
+            <article class="produto">
+                <img src="./imagens/longleff.jpg">
+                <h3>Cerveja IPA</h3>
+                <p>Lorem ipsum dolor afertunm lorem dolorics at notecum</p>
+                <button>Comprar</button>
+            </article>
+            <article class="produto">
+                <img src="./imagens/meretriz.jpg">
+                <h3>Cerveja IPA</h3>
+                <p>Lorem ipsum dolor afertunm lorem dolorics at notecum</p>
+                <button>Comprar</button>
+            </article>
+        </div>
+     </section>
      <section id="contato">
-        <div class="container">
-            <div class="box">
+        <div class="canais">
+            <div class="canal">
                 <h2>Fale conosco</h2>
                 <form>
                     <input type="text" placeholder="Seu nome" required>
@@ -55,7 +84,7 @@
                     <button type="submit">Enviar</button>
 
             </div>
-            <div class="box">
+            <div class="canal">
                 <h2>Siga-nos</h2>
                 <ul class="social">
                     <li><a href="#"><img src="./imagens/instagram.png" alt="Siga-nos no instagram"></a></li>
@@ -63,7 +92,7 @@
                     <li><a href="#"><img src="./imagens/youtube.png" alt="Siga-nos no Youtube"></a></li>
                 </ul>
             </div>
-            <div class="box">
+            <div class="canal">
                 <h2>Encontre-nos</h2>
                 <p>Rua das Alamedas, 158<br>Centro, São Paulo<br>CEP 99.999-000</p>
             </div>
